--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.6
   go_router: ^10.2.0
+  cloud_firestore: ^4.9.2
 
 dev_dependencies:
   flutter_test:
