--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.6
   go_router: ^10.2.0
+  provider: ^6.0.5
+  flutter_dotenv: ^5.1.0
+  dio: ^5.3.3
+  flutter_riverpod: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
